[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "gitpython>=3.1.43",
    "markdown>=3.7",
    "ollama>=0.4.5",
    "openai>=1.58.1",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
]
